# VectorVault

./: .clang-format  .clang-tidy  .gitignore  BUILD_SUMMARY.md  CMakeLists.txt  CONTRIBUTING.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICKSTART.md  README.md  RELEASE_NOTES.md
.github/workflows/: ci.yml
.meta/: project-health.json
api/: main.cpp  server.hpp
bench/: bench_main.cpp  brute_force.cpp  gen_data.cpp
clients/python/: README.md  example.py  requirements.txt  vectorvault_client.py
cmake/: Dependencies.cmake  warnings.cmake
docker/: Dockerfile
include/vectorvault/: distance.hpp  hnsw.hpp  index.hpp  mmap_io.hpp  thread_pool.hpp  version.hpp
scripts/: dataset_specs.md  docker_release.sh  gen_smoke_data.cpp  plot_bench.py  prepare_release.sh  run_bench.sh
src/: distance_avx2.cpp  distance_naive.cpp  hnsw.cpp  index_factory.cpp  mmap_io.cpp  thread_pool.cpp
tests/: test_api_integration.cpp  test_distance.cpp  test_hnsw_small.cpp  test_persistence.cpp
